--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,30 +6,67 @@
         xmlns:local="clr-namespace:Record"
         mc:Ignorable="d"
         Title="Record FM" 
-        Height="150" 
-        Width="350"
+        Height="360" 
+        Width="360"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None" 
         ResizeMode="NoResize"
-        MouseDown="Window_MouseDown" Initialized="Window_Initialized" Background="{x:Null}" >
-    <Grid Margin="0,0,0,10">
+        MouseDown="Window_MouseDown" Initialized="Window_Initialized" >
+    <Window.Background>
+        <ImageBrush ImageSource="/Resources/record_new.jpg" Stretch="UniformToFill" TileMode="None"/>
+    </Window.Background>
+    <Grid Margin="0,0,0,0">
         <DockPanel Height="30" VerticalAlignment="Top">
             <Border Height="20" Width="20" Background="#66000000" HorizontalAlignment="Right" Margin="0,0,5,0" DockPanel.Dock="Right">
-                <Image Name="close" Width="20" Height="20" Source="/Resources/close.png" MouseLeftButtonDown="close_MouseLeftButtonDown" />
+                <Image x:Name="close" Width="20" Height="20" Source="/Resources/close.png" MouseLeftButtonDown="close_MouseLeftButtonDown" />
             </Border>
             <Border Height="20" Width="20" Background="#66000000" HorizontalAlignment="Right" Margin="0,0,5,0" DockPanel.Dock="Right">
-                <Image Name="minimize" Width="20" Height="20" Source="/Resources/minimize.png" VerticalAlignment="Center"  MouseLeftButtonDown="minimize_MouseLeftButtonDown" />
+                <Image x:Name="minimize" Width="20" Height="20" Source="/Resources/minimize.png" VerticalAlignment="Center"  MouseLeftButtonDown="minimize_MouseLeftButtonDown" />
             </Border>
         </DockPanel>
         <Border Height="100" Width="100" Background="#66000000" Margin="5,35,0,5" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2" Panel.ZIndex="2" CornerRadius="100,100,100,100">
-            <Image Name="Image1"  Height="100" Width="100" />
+            <Image x:Name="Image1"  Height="100" Width="100" />
         </Border>
         <Border Height="100" Width="100" Background="#66000000" CornerRadius="100,100,100,100" HorizontalAlignment="right" Margin="0,35,5,0" VerticalAlignment="Top" Grid.Column="1">
-            <Image Name="Image2" Height="100" Width="100" MouseLeftButtonDown="PlayStop_MouseLeftButtonDown" MouseEnter="PlayStop_MouseEnter" MouseLeave="PlayStop_MouseLeave" />
+            <Image x:Name="Image2" Height="100" Width="100" MouseLeftButtonDown="PlayStop_MouseLeftButtonDown" MouseEnter="PlayStop_MouseEnter" MouseLeave="PlayStop_MouseLeave" />
         </Border>
-        <ComboBox Name="ComboBox1" HorizontalAlignment="Center" Margin="0,35,0,0" VerticalAlignment="Top" Width="123" SelectionChanged="ComboBox1_SelectionChanged">
-        </ComboBox>
-        <ComboBox Name="ComboBox2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="123" SelectionChanged="ComboBox2_SelectionChanged" Margin="0,70,0,0"/>
-        <Slider Name="Slider1" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Top" Width="122" Maximum="20" LargeChange="2" SmallChange="1" Value="10" TickPlacement="TopLeft" ValueChanged="Slider_ValueChanged"/>
+        <ComboBox x:Name="ComboBox1" HorizontalAlignment="Center" Margin="0,35,0,0" VerticalAlignment="Top" Width="123" SelectionChanged="ComboBox1_SelectionChanged"/>
+        <ComboBox x:Name="ComboBox2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="123" SelectionChanged="ComboBox2_SelectionChanged" Margin="0,70,0,0"/>
+        <Slider x:Name="Slider1" HorizontalAlignment="Center" Margin="0,105,0,0" VerticalAlignment="Top" Width="122" Maximum="20" LargeChange="2" SmallChange="1" Value="10" TickPlacement="TopLeft" ValueChanged="Slider_ValueChanged" Background="{x:Null}"/>
+        <GroupBox Header="Graphic EQ" Margin="0,135,0,0" Foreground="White" Background="#66000000">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <!--<Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>-->
+                <DockPanel Grid.Row="0" Margin="5">
+                    <CheckBox x:Name="EQActivate" Content="Activate" VerticalAlignment="Center" Foreground="White" Unchecked="CheckBoxChanged" Checked="CheckBoxChanged" HorizontalAlignment="Left"/>
+                    <Button x:Name="Reset" Content="RESET" Width="50" HorizontalAlignment="Right" DockPanel.Dock="Right" Click="Reset_Click" FontFamily="Arial" />
+                </DockPanel>
+                <DockPanel Grid.Row="1" Margin="5" HorizontalAlignment="Center">
+                    <Slider Name="Band1Gain" Orientation="Vertical" Margin="8" Minimum="-30" Maximum="30" Value="0" ValueChanged="Slider_ValueChanged_1" SmallChange="1" LargeChange="2"/>
+                    <Slider Name="Band2Gain" Orientation="Vertical" Margin="8" Minimum="-30" Maximum="30" Value="0" ValueChanged="Slider_ValueChanged_2" SmallChange="1" LargeChange="2"/>
+                    <Slider Name="Band3Gain" Orientation="Vertical" Margin="8" Minimum="-30" Maximum="30" Value="0" ValueChanged="Slider_ValueChanged_3" SmallChange="1" LargeChange="2"/>
+                    <Slider Name="Band4Gain" Orientation="Vertical" Margin="8" Minimum="-30" Maximum="30" Value="0" ValueChanged="Slider_ValueChanged_4" SmallChange="1" LargeChange="2"/>
+                    <Slider Name="Band5Gain" Orientation="Vertical" Margin="8" Minimum="-30" Maximum="30" Value="0" ValueChanged="Slider_ValueChanged_5" SmallChange="1" LargeChange="2"/>
+                    <Slider Name="Band6Gain" Orientation="Vertical" Margin="8" Minimum="-30" Maximum="30" Value="0" ValueChanged="Slider_ValueChanged_6" SmallChange="1" LargeChange="2"/>
+                    <Slider Name="Band7Gain" Orientation="Vertical" Margin="8" Minimum="-30" Maximum="30" Value="0" ValueChanged="Slider_ValueChanged_7" SmallChange="1" LargeChange="2"/>
+                    <Slider Name="Band8Gain" Orientation="Vertical" Margin="8" Minimum="-30" Maximum="30" Value="0" ValueChanged="Slider_ValueChanged_8" SmallChange="1" LargeChange="2"/>
+                </DockPanel>
+                <DockPanel Grid.Row="2">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
+                        <Label Content="Preference" Foreground="White"></Label>
+                        <ComboBox Name="ComboBox3" Width="150" SelectionChanged="ComboBox3_SelectionChanged"></ComboBox>
+                        <Button Content="SAVE" Click="Button_Click" Margin="5,0,0,0" Panel.ZIndex="-1" Width="51" FontFamily="Arial"/>
+                    </StackPanel>
+                </DockPanel>
+            </Grid>
+        </GroupBox>
     </Grid>
 </Window>
